--- a/Views/Preguntas.xaml
+++ b/Views/Preguntas.xaml
@@ -15,8 +15,8 @@
         <k:KinectRegion Name="regionKt">
             <Grid>
                 <k:KinectUserViewer DefaultUserColor="Gray" PrimaryUserColor="Green" Margin="643,0,0,306" />
-                <k:KinectTileButton  Label="SI" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="141,210,426,34" Click="KinectTileButton_Click" Height="175" Width="225" FontFamily="Segoe UI Black" Background="#FFB81515" Content="" LabelBackground="#E60A0A0A" Foreground="White"/>
-                <k:KinectTileButton  Label="NO" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="436,211,133,35" Click="KinectTileButton_Click" Height="175" Width="225" FontFamily="Segoe UI Black" Background="#FFB81515" Content="" LabelBackground="#E60A0A0A" Foreground="White"/>
+                <k:KinectTileButton  Label="SI" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="141,210,426,34" Height="175" Width="225" FontFamily="Segoe UI Black" Background="#FFB81515" Content="" LabelBackground="#E60A0A0A" Foreground="White" Click="Click_SI"/>
+                <k:KinectTileButton  Label="NO" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="436,211,133,35" Height="175" Width="225" FontFamily="Segoe UI Black" Background="#FFB81515" Content="" LabelBackground="#E60A0A0A" Foreground="White" Click="Click_NO"/>
             </Grid>
         </k:KinectRegion>
         <k:KinectSensorChooserUI Name="kinectSensorUI"  HorizontalAlignment="Center" VerticalAlignment="Top" ></k:KinectSensorChooserUI>
