--- a/Views/Resultado.xaml
+++ b/Views/Resultado.xaml
@@ -8,7 +8,7 @@
     xmlns:k="http://schemas.microsoft.com/kinect/2013"
         Title="Game" Height="450" Width="800"  ResizeMode="NoResize" Loaded="Window_Loaded">
     <Window.Background>
-        <ImageBrush ImageSource="/ControllersKinect;component/img/71rHyBh21ZL.jpg"/>
+        <ImageBrush ImageSource="/ControllersKinect;component/img/bg1.jpg"/>
     </Window.Background>
     <Grid>
 
@@ -18,12 +18,12 @@
                 <Image Name="imgPersonaje" HorizontalAlignment="Left" Height="296" Margin="125,10,0,0" VerticalAlignment="Top" Width="253"
                         />
                 <k:KinectUserViewer DefaultUserColor="Gray" PrimaryUserColor="Green" Margin="643,0,0,306" />
-                <k:KinectTileButton  Label="Jugar de nuevo" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="471,237,56,31" Click="KinectTileButton_Click" Height="153" Width="267" FontFamily="Segoe UI Black" Background="#FFB81515" Content="" LabelBackground="#E60A0A0A" Foreground="White"/>
+                <k:KinectTileButton  Label="Jugar de nuevo" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="471,237,56,31" Click="KinectTileButton_Click" Height="153" Width="267" FontFamily="Segoe UI Black" Background="LightGray" Content="" LabelBackground="#E60A0A0A" Foreground="White"/>
             </Grid>
         </k:KinectRegion>
         <k:KinectSensorChooserUI Name="kinectSensorUI"  HorizontalAlignment="Center" VerticalAlignment="Top" ></k:KinectSensorChooserUI>
-        <TextBlock Name="txtDatos" HorizontalAlignment="Left" Margin="471,27,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="192" Width="261" Foreground="Black" FontWeight="Bold" FontSize="16"/>
-        <Label Name="lblnombre" Content="Label" HorizontalAlignment="Left" Margin="136,337,0,0" Width="224" Height="74" Foreground="Black" FontWeight="ExtraBold" FontSize="24" VerticalAlignment="Top"/>
+        <TextBlock Name="txtDatos" HorizontalAlignment="Left" Margin="471,27,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="192" Width="261" Foreground="White" FontWeight="Bold" FontSize="16"/>
+        <Label Name="lblnombre" Content="Label" HorizontalAlignment="Left" Margin="136,337,0,0" Width="224" Height="74" Foreground="White" FontWeight="ExtraBold" FontSize="24" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
